ui and css fixes, spacing adjustments,

--- a/css/style.css
+++ b/css/style.css
@@ -160,11 +160,15 @@ button {
   font-weight: 500;
   margin-left: 20px;
 }
-
-.feed {
+.feed-main {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+}
+
+#feed {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   padding: 20px 18px 8px;
 }
 
@@ -173,6 +177,7 @@ button {
   background-color: var(--graygreen);
   border-radius: var(--radius-lg);
   padding: 20px;
+  
 }
 .post-card-header {
   display: flex;
@@ -203,12 +208,6 @@ button {
   font-size: 16px;
 }
 
-.add-post-btn {
-  background-color: var(--pink-primary);
-  color: var(--white);
-  font-size: 20px;
-  line-height: 1;
-}
 
 .post-title {
   font-size: 14px;
@@ -358,9 +357,3 @@ h4 {
   width: 100%;
 }
 .load-more-icon { font-size: 20px; }
-
-
-button:focus-visible {
-  outline: 2.5px solid var(--pink);
-  outline-offset: 2px;
-}
